--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
 
   sql:
     init:
-      mode: always
+      mode: never
       continue-on-error: false
 
   security:
@@ -42,3 +42,5 @@ logging:
     com.deadlands: DEBUG
     org.springframework.security: DEBUG
     org.hibernate.SQL: DEBUG
+    org.springframework.web: DEBUG
+    org.springframework.boot.web: DEBUG
