--- a/backend/src/main/resources/application-production.yml
+++ b/backend/src/main/resources/application-production.yml
@@ -26,11 +26,12 @@ spring:
           batch_size: 20
         order_inserts: true
         order_updates: true
-    defer-datasource-initialization: false
+    defer-datasource-initialization: true
 
   sql:
     init:
-      mode: never
+      mode: always
+      continue-on-error: false
 
   security:
     jwt:
