--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,10 @@
 FROM node:18-alpine AS build
 WORKDIR /app
+
+# Accept build argument for API URL
+ARG VITE_API_URL
+ENV VITE_API_URL=${VITE_API_URL}
+
 COPY package*.json ./
 RUN npm install
 COPY . .
