--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,20 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "@tanstack/react-query": "^5.17.9",
-    "axios": "^1.6.5",
-    "zustand": "^4.4.7",
-    "@mui/material": "^5.15.3",
-    "@mui/icons-material": "^5.15.3",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.15.3",
+    "@tanstack/react-query": "^5.17.9",
+    "axios": "^1.6.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.21.1",
     "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.4"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
