--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,7 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "Dockerfile"
-dockerContext = "frontend"
+dockerfilePath = "frontend/Dockerfile"
+dockerContext = "."
 
 [deploy]
 numReplicas = 1
