--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,7 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "frontend/Dockerfile"
-dockerContext = "."
+dockerfilePath = "Dockerfile"
+dockerContext = "frontend"
 
 [deploy]
 numReplicas = 1
