Add SessionRoom, AI Gamemaster Assistant, and browser compatibility fixes
## Major Features

### 1. SessionRoom (Pre-Game Waiting Lobby)
- Multiplayer waiting room before game starts
- Real-time player list with WebSocket synchronization
- GM can see all joined players with character info
- "Start Game" button navigates all players to arena
- Player count display (e.g., "2/5 players")
- Connection status indicator
- Route: /session/:id (between lobby and arena)

**Backend Changes:**
- GameSessionController: Added startGame endpoint
- WebSocket events for player join/leave

**Frontend Changes:**
- SessionRoom.tsx (370 lines): New waiting lobby component
- Updated session flow: Lobby -> SessionRoom -> GameArena
- WebSocket integration for real-time updates

### 2. AI Gamemaster Assistant
- Anthropic Claude 3.5 Sonnet integration
- 5 AI features: NPC Dialogue, Rules Lookup, Encounter Gen, Location Gen, GM Suggestions
- Role-based access (some features GM-only)
- Configurable via ANTHROPIC_API_KEY environment variable

**Backend Changes:**
- AIGameMasterService.java (188 lines): Core AI logic
- AIAssistantController.java (116 lines): REST API
- 5 DTO classes for requests/responses
- Spring AI 1.0.0-M4 dependency added
- Config in application.yml and application-production.yml

**Frontend Changes:**
- AIAssistantPanel.tsx: Main UI (toggle button in Combat HUD)
- 4 tab components for each AI feature
- aiService.ts: API client
- Integration into GameArena

### 3. Browser Compatibility Fixes
- Added Node.js polyfills for SockJS/WebSocket in browser
- Fixes "process is not defined" and crypto errors
- Custom Vite plugin to inject process global

**Changes:**
- vite.config.ts: Added polyfills and process injection
- package.json: Added crypto-browserify, stream-browserify, buffer, process

## Testing
- 10 new E2E test scenarios for SessionRoom
- SessionRoomPage.js page object (170 lines)
- 14 new step definitions
- Total: 17 E2E scenarios (7 multiplayer + 10 SessionRoom)

## 

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -28,6 +28,15 @@ spring:
       secret: ${JWT_SECRET:your-256-bit-secret-change-this-in-production}
       expiration: 86400000 # 24 hours in milliseconds
 
+  ai:
+    anthropic:
+      api-key: ${ANTHROPIC_API_KEY:your-anthropic-api-key-here}
+      chat:
+        options:
+          model: claude-3-5-sonnet-20241022
+          temperature: 0.8
+          max-tokens: 1000
+
 server:
   port: 8080
   servlet:
