--- a/backend/src/main/resources/application-production.yml
+++ b/backend/src/main/resources/application-production.yml
@@ -38,6 +38,15 @@ spring:
       secret: ${JWT_SECRET}
       expiration: ${JWT_EXPIRATION:86400000}
 
+  ai:
+    anthropic:
+      api-key: ${ANTHROPIC_API_KEY}
+      chat:
+        options:
+          model: claude-3-5-sonnet-20241022
+          temperature: 0.8
+          max-tokens: 1500
+
 server:
   port: ${SERVER_PORT:8080}
   servlet:
