--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,10 +39,14 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^27.1.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vitest": "^4.0.8"
